# secrething

./: .air.toml  .dockerignore  .gitignore  .miconfig.yaml  Cargo.toml  Dockerfile  Makefile  README.md  cli.sh  dev.sh  go.mod  go.sum  gopack.json  main.go  migrate.sh  run_tests.sh  setup.sh  sqlc.yaml  validator.go
.bruno/: bruno.json  health.bru
.scripts/: migrate.sh  run_tests.sh  setup.sh
backend/: .air.toml  .env.example  .gitignore  go.mod  go.sum  sqlc.yaml
bruno/: bruno.json
common/: app_env.go  time_formats.go
config/: env.go
database/: connect.go  connection.go  index.go  migrate.go  model.go
dev_keys/: README.md
docs/: vault-permissions-design.md
konbini-server/: Cargo.toml
konbini-server/migrations/: 1734547798_users_table.up.sql  1734550622_email_tokens_table.down.sql  1734550622_email_tokens_table.up.sql  1734550744_sessions_table.up.sql  1734551096_groups_table.up.sql  1734551354_users_groups_table.up.sql  1734551530_bentos_table.down.sql  1734551530_bentos_table.up.sql  1734551671_bento_ingridients_table.down.sql  1734551671_bento_ingridients_table.up.sql  1734551797_bento_permissions_table.down.sql  1734551797_bento_permissions_table.up.sql  1734551926_group_permissions_table.down.sql  1734551926_group_permissions_table.up.sql  1734552028_bento_tokens_table.down.sql  1734552028_bento_tokens_table.up.sql  1734555638_access_logs_table.down.sql  1734555638_access_logs_table.up.sql  schema.sql
konbini-server/scripts/: setup_dev.sh
konbini-server/src/: config.rs  main.rs  routes.rs  state.rs
konbini-server/src/handlers/: health.rs
(+676 files in other folders)
