[package]
name = "konbini-server"
version = "0.1.0"
edition = "2021"

[dependencies]
konbini-core = { path = "../konbini-core" }
axum = "0.7.9"
tower-http = "0.6.2"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
libsql = "0.6.0"
dotenvy = "0.15.7"
jsonwebtoken.workspace = true
serde.workspace = true
uuid.workspace = true
thiserror.workspace = true
validator = { version = "0.19.0", features = ["derive"] }
